wither_derive/tests/fail/field-id-missing.rs
use serde::{Serialize, Deserialize};
use wither::Model;

#[derive(Serialize, Deserialize, Model)]
struct BadModel {
    name: String,
}

fn main() {}
